--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,14 @@
             "email": "a.n.baranov@outlook.com"
         }
     ],
-    "require": {},
+    "autoload": {
+        "files": [
+            "src/Cli.php"
+        ]
+    },
+    "require": {
+        "wp-cli/php-cli-tools": "^0.11.13"
+    },
     "bin": [
         "bin/brain-games"
       ]
