--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,17 @@
     ],
     "autoload": {
         "files": [
-            "src/Cli.php"
+            "src/Cli.php",
+            "src/Engine.php",
+            "src/Games/Calc.php"
         ]
     },
     "require": {
         "wp-cli/php-cli-tools": "^0.11.13"
     },
     "bin": [
-        "bin/brain-games"
+        "bin/brain-games",
+        "bin/brain-calc"
       ],
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.6"
