--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "files": [
             "src/Cli.php",
             "src/Engine.php",
-            "src/Games/Calc.php"
+            "src/Games/Calc.php",
+            "src/Games/Gcd.php"
         ]
     },
     "require": {
@@ -18,7 +19,8 @@
     },
     "bin": [
         "bin/brain-games",
-        "bin/brain-calc"
+        "bin/brain-calc",
+        "bin/brain-gcd"
       ],
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.6"
