--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
             "src/Cli.php",
             "src/Engine.php",
             "src/Games/Calc.php",
-            "src/Games/Gcd.php"
+            "src/Games/Gcd.php",
+            "src/Games/Progression.php"
         ]
     },
     "require": {
@@ -20,7 +21,8 @@
     "bin": [
         "bin/brain-games",
         "bin/brain-calc",
-        "bin/brain-gcd"
+        "bin/brain-gcd",
+        "bin/brain-progression"
       ],
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.6"
