--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
             "src/Engine.php",
             "src/Games/Calc.php",
             "src/Games/Gcd.php",
-            "src/Games/Progression.php"
+            "src/Games/Progression.php",
+            "src/Games/Prime.php"
         ]
     },
     "require": {
@@ -22,7 +23,8 @@
         "bin/brain-games",
         "bin/brain-calc",
         "bin/brain-gcd",
-        "bin/brain-progression"
+        "bin/brain-progression",
+        "bin/brain-prime"
       ],
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.6"
