--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
             "src/Games/Calc.php",
             "src/Games/Gcd.php",
             "src/Games/Progression.php",
-            "src/Games/Prime.php"
+            "src/Games/Prime.php",
+            "src/Games/Even.php"
         ]
     },
     "require": {
@@ -24,7 +25,8 @@
         "bin/brain-calc",
         "bin/brain-gcd",
         "bin/brain-progression",
-        "bin/brain-prime"
+        "bin/brain-prime",
+        "bin/brain-even"
       ],
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.6"
